# microservices

./: .env  .gitignore  docker-compose.yml
backend_service/: Dockerfile  pyproject.toml  sqlc.yaml  yoyo.ini
backend_service/config/: .env.example  __init__.py  logger.py  settings.py
backend_service/migrations/: backend_20250505_01_AFTgp-init.sql  backend_20250506_01_nO3Ov-can-subscribe.sql
backend_service/queries/: ws-requests.sql
backend_service/src/: __main__.py
backend_service/src/api/grpc/protobufs/: __init__.py
backend_service/src/api/grpc/protobufs/proxy/: proxy_pb2.py  proxy_pb2.pyi  proxy_pb2_grpc.py
backend_service/src/api/grpc/services/: __init__.py  proxy.py
backend_service/src/api/sqlc/: models.py  ws_requests.py
backend_service/src/storage/: postgres.py
config/centrifugo/: config.json
configs/centrifugo/: config.json
frontend_service/: index.html
frontend_service/js/: connect.js
protofiles/: proxy.proto
