[project]
name = "backend-service"
version = "0.1.0"
description = ""
authors = [
    {name = "TiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "yoyo-migrations (>=9.0.0,<10.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
